--- a/docs/5. LOGGING_WITH_ELK_STACK.md
+++ b/docs/5. LOGGING_WITH_ELK_STACK.md
@@ -14,7 +14,7 @@ We will deploy the logging stack in a `logging` namespace and expose Kibana thro
 </div>
 
 Our logging architecture consists of:
-- **Elasticsearch** - Distributed search and analytics engine for storing logsDaniel
+- **Elasticsearch** - Distributed search and analytics engine for storing logs
 - **Filebeat** - Lightweight log shipper deployed as DaemonSet on all nodes
 - **Logstash** - Data processing pipeline for parsing and enriching logs (optional)
 - **Kibana** - Web interface for searching and visualizing logs
@@ -38,12 +38,12 @@ Ensure you have:
 
 ## 3. Setup ELK Stack
 
-### Create the Namespace
+### 3.1 Create the Namespace
 ```bash
 kubectl create namespace logging
 ```
 
-### Add the Elastic Helm Repository
+### 3.2 Add the Elastic Helm Repository
 
 ```bash
 helm repo add elastic https://helm.elastic.co
@@ -111,13 +111,13 @@ For a simple setup, deploy Filebeat to send logs directly to Elasticsearch:
 
 For advanced log processing, add Logstash between Filebeat and Elasticsearch:
 
-### Deploy Logstash
+### 7.1 Deploy Logstash
 ```bash
 helm install logstash elastic/logstash -n logging \
   -f helm-charts/logstash/values.yml
 ```
 
-### Deploy Filebeat (configured for Logstash)
+### 7.2 Deploy Filebeat (configured for Logstash)
 ```bash
 helm install filebeat elastic/filebeat -n logging \
   --set filebeat.autodiscover.providers[0].node="${NODE_NAME}" \
@@ -133,7 +133,7 @@ helm install filebeat elastic/filebeat -n logging \
 
 ## 8. Verify Deployment
 
-### Check All Pods
+### 8.1 Check All Pods
 ```bash
 kubectl get pods -n logging
 ```
@@ -147,12 +147,12 @@ kibana-kibana-xxxxxxxxx-xxxxx    1/1     Running   0          8m
 logstash-logstash-0              1/1     Running   0          6m  # (if using EFLK)
 ```
 
-### Check Services
+### 8.2 Check Services
 ```bash
 kubectl get svc -n logging
 ```
 
-### Verify Log Ingestion
+### 8.3 Verify Log Ingestion
 ```bash
 # Get Elasticsearch credentials
 ELASTIC_USER=$(kubectl get secret elasticsearch-master-credentials -n logging -o jsonpath='{.data.username}' | base64 --decode)
@@ -169,37 +169,267 @@ curl -u $ELASTIC_USER:$ELASTIC_PASS "http://localhost:9200/_cat/indices?v"
 
 ## 9. Using Kibana for Log Analysis
 
-### Initial Setup
+### 9.1 Initial Setup
 1. Navigate to `http://kibana.34.63.222.25.nip.io`
 2. Login with Elasticsearch credentials
 3. Go to **Stack Management** → **Index Patterns**
-4. Create index pattern: `filebeat-*` or `logstash-*h`
+4. Create index pattern: `filebeat-*` or `logstash-*`
 5. Select `@timestamp` as time field
 
-### Common Log Queries
-In Kibana's **Discover** section:
+### 9.2 Understanding Data Views in Kibana
 
-**Filter by Application:**
+Data Views (formerly called Index Patterns) define which Elasticsearch indices you want to explore and how fields should be displayed. Here's how to work with them:
+
+**Creating a Data View:**
+1. Go to **Stack Management** → **Data Views**
+2. Click **Create data view**
+3. Enter index pattern: `filebeat-*` (matches all Filebeat indices)
+4. Select `@timestamp` as the time field
+5. Save the data view
+
+**Key Fields in Log Data:**
+- `@timestamp`: When the log was generated
+- `message`: The actual log message content (contains log level, IP, HTTP requests, etc.)
+- `kubernetes.namespace`: Which namespace the pod is in
+- `kubernetes.pod.name`: Specific pod that generated the log
+- `kubernetes.labels.app`: Application label
+- `host.name`: Host where the log originated
+- `stream`: stdout or stderr
+- `log.file.path`: Path to the log file
+- `agent.name`: Log collection agent (filebeat, etc.)
+
+### 9.3 Reading Data in Kibana Discover
+
+The **Discover** interface is where you'll spend most of your time analyzing logs. Here's how to effectively read and navigate your data:
+
+#### Time Range Selection
+1. **Time Picker** (top-right): Select your time range
+   - Quick options: Last 15 minutes, Last hour, Last 24 hours
+   - Custom range: Pick specific start/end times
+   - Auto-refresh: Set automatic refresh intervals
+
+#### Document Table Navigation
+The main table shows your log entries with these features:
+
+**Column Management:**
+- Click **+** next to field names to add columns
+- Drag column headers to reorder
+- Click **x** on column headers to remove
+
+**Document Expansion:**
+- Click **>** arrow to expand a log entry
+- **Table view**: Shows all fields in a structured format
+- **JSON view**: Shows raw document structure
+- **Surrounding documents**: View logs before/after this entry
+
+#### Essential Reading Techniques
+
+**1. Field Filtering:**
+
+<div align="center">
+  <img src="../images/kibana_add_filter.png" alt="Prometheus Architecture 
+  Overview" width="800">
+  <p><em>Click on field values to filter</em></p>
+</div>
+
 ```
-kubernetes.labels.app: "asl"
+kubernetes.labels.app: "hand-gesture"          # Show only hand-gesture app logs
+message: "ERROR"                         # Show only error logs (log level in message)
+kubernetes.namespace: "model-serving"   # Filter by namespace
+host.name: "specific-host"              # Filter by host
 ```
 
-**Filter by Log Level:**
+**2. Text Search:**
 ```
-log.level: "ERROR"
+# Search in the main search bar
+"gesture detection"                   # Exact phrase
+gesture and detection                 # Both terms present
+gesture or detection                  # Either term present
+not error                            # Exclude error logs
 ```
 
-**Filter by Namespace:**
+**3. Field-Specific Searches:**
 ```
-kubernetes.namespace: "default"
+# Search in message field
+message: "connection timeout"         # Search in message field
+kubernetes.pod.name: *gesture*       # Wildcard search
+message: ("ERROR" or "WARN")         # Multiple log levels in message
+@timestamp >= "now-1h"               # Time range query 
 ```
 
-**Search Log Content:**
+**4. Advanced Filtering:**
+- **Add Filter**: Click **+ Add filter** for precise field filtering
+- **Filter Actions**: Include/exclude, enable/disable, edit filters
+- **Saved Searches**: Save frequently used queries
+
+#### Reading Log Context
+
+**Understanding Log Flow:**
+1. **Sort by @timestamp**: See chronological order of events
+2. **Group by pod**: Track specific pod behavior
+3. **Filter by request ID**: Follow a single request through the system
+
+### 9.4 Common Log Queries and Patterns
+
+<div align="center">
+  <img src="../images/kibana_logging_queries.png" alt="Prometheus Architecture 
+  Overview" width="800">
+  <p><em>Click on field values to filter</em></p>
+</div>
+
+**Application-Specific Queries:**
 ```
+# Filter by Application
+kubernetes.labels.app: "hand-gesture"
+
+# Filter by Log Level (within message field)
+message: "ERROR"                      # Error logs
+message: "INFO"                       # Info logs
+message: "WARN"                       # Warning logs
+
+# Filter by Namespace
+kubernetes.namespace: "model-serving"
+
+# Search Log Content
 message: "gesture detection"
+
+# Multiple Conditions
+kubernetes.labels.app: "hand-gesture" and message: "ERROR"
+
+# Time-based Queries (use time picker or relative time)
+@timestamp >= "now-1h"               # Last hour
+@timestamp >= "now-1d"               # Last day
+
+# Filter by Host
+host.name: "specific-host-name"
+
+# Filter by Stream (stdout/stderr)
+stream: "stdout"
+stream: "stderr"
 ```
 
-### Creating Dashboards
+**Troubleshooting Queries:**
+```
+# Find all errors in last hour (use time picker for time range)
+message: "ERROR"
+
+# Find specific pod issues
+kubernetes.pod.name: "gesture-pod-123" and message: ("ERROR" or "WARN")
+
+# Find connection issues
+message: ("connection" or "timeout" or "refused")
+
+# Find high memory usage
+message: ("memory" or "OOM" or "out of memory")
+
+# Find specific log patterns from your examples
+message: "GET /metrics HTTP/1.1"     # HTTP metrics requests
+message: "200 OK"                    # Successful HTTP responses
+message: "Connect to server"         # Server connection logs
+message: "Non-zero metrics"          # Filebeat monitoring logs
+
+# Find CSI (Container Storage Interface) logs
+message: "csi.v1.Node"              # CSI node operations
+message: "NodeGetVolumeStats"       # Volume statistics calls
+```
+
+**Performance Monitoring:**
+```
+# Find slow responses
+message: "response_time" and message: *500*
+
+# Database query issues
+message: ("database" or "query") and log.level: "ERROR"
+
+# API endpoint performance
+message: "GET /api" or message: "POST /api"
+
+kubernetes.namespace: "model-serving" and  kubernetes.labels.app: "hand-gesture"  and message: "POST /auth/login" 
+```
+
+**API-Specific Log Queries:**
+```
+# Query specific API endpoints
+message: "GET /metrics"              # All metrics endpoint calls
+message: "POST /predict"             # All prediction requests
+message: "GET /health"               # Health check calls
+
+# Filter by HTTP status codes
+message: "200 OK"                    # Successful requests
+message: "404" or message: "500"     # Error responses
+message: *4?? or message: *5??       # All 4xx or 5xx errors
+
+# Filter by HTTP methods
+message: "GET *"                     # All GET requests
+message: "POST *"                    # All POST requests
+message: "PUT *" or message: "DELETE *"  # Modify operations
+
+# Combine endpoint and status
+message: "GET /metrics" and message: "200 OK"     # Successful metrics calls
+message: "POST /predict" and message: *5??        # Failed predictions
+
+# Filter by client IP (from your logs)
+message: "10.0.1.57"                # Specific client requests
+message: "10.0.1.*"                 # All internal network requests
+
+# API performance analysis
+message: "HTTP/1.1" and not message: "200 OK"    # Non-successful requests
+message: "/api" and @timestamp >= "now-1h"       # Recent API calls
+
+kubernetes.namespace: "model-serving" and kubernetes.labels.app: "hand-gesture" and message: "POST /auth/login" 
+```
+
+**Log Format-Specific Queries (Based on Your Examples):**
+```
+# HTTP Access Logs (Format: INFO: IP:PORT - "METHOD /path HTTP/1.1" STATUS)
+message: "INFO:" and message: "HTTP/1.1"         # All HTTP access logs
+message: "INFO:" and message: "GET /metrics"     # Metrics endpoint access
+message: "INFO:" and message: "10.0.1.57"       # Specific client IP
+
+# Kubernetes Component Logs (Format: I0710 02:50:49.208080 ...)
+message: "I0710" or message: "E0710" or message: "W0710"  # Kubernetes logs by date
+message: "client.go" and message: "Connect to server"     # Client connection logs
+message: "utils.go" and message: "NodeGetVolumeStats"     # CSI volume operations
+
+# JSON Structured Logs (Filebeat/Monitoring)
+message: "log.level" and message: "info"         # JSON logs with level info
+message: "service.name" and message: "filebeat"  # Filebeat service logs
+message: "Non-zero metrics in the last 30s"     # Monitoring metrics logs
+message: "monitoring.metrics.beat"              # Beat metrics logs
+
+# Error Pattern Matching
+message: "ERROR" or message: "Exception" or message: "Failed"  # General errors
+message: "connection" and message: ("timeout" or "refused")    # Connection issues
+message: "memory" and message: ("usage" or "limit")           # Memory-related logs
+```
+
+**Advanced API Log Analysis:**
+```
+# Find API rate limiting or high traffic
+message: "GET /metrics" and @timestamp >= "now-5m"  # Recent metrics calls
+
+# Identify problematic endpoints
+message: *5?? and message: "/api"    # Server errors on API endpoints
+
+# Monitor specific user agents or clients
+message: "User-Agent" and message: "curl"          # Curl requests
+message: "User-Agent" and message: "Python"        # Python client requests
+
+# Track API response times (if logged)
+message: "response_time" and message: "/predict"   # Prediction endpoint timing
+message: "duration" and message: "ms"              # Requests with timing info
+
+# Security monitoring
+message: "401" or message: "403"     # Authentication/authorization failures
+message: "GET" and message: "../"    # Potential path traversal attempts
+
+# Kubernetes-specific monitoring
+message: "csi.v1.Node" and message: "NodeGetVolumeStats"  # Storage operations
+message: "Connect to server" and message: "serverID"      # Server connections
+message: "capabilities" and message: "rpc"                # RPC capabilities
+```
+
+### 9.5 Creating Dashboards
 1. Go to **Dashboard** → **Create dashboard**
 2. Add visualizations for:
    - Log volume over time
@@ -211,7 +441,7 @@ message: "gesture detection"
 
 ## 10. Maintenance Commands
 
-### Check Logging Stack Status
+### 10.1 Check Logging Stack Status
 ```bash
 # Check all logging pods
 kubectl get pods -n logging
@@ -223,7 +453,7 @@ kubectl get svc,ingress -n logging
 kubectl exec -it elasticsearch-master-0 -n logging -- curl -u elastic:$ELASTIC_PASS http://localhost:9200/_cluster/health?pretty
 ```
 
-### Upgrade Components
+### 10.2 Upgrade Components
 ```bash
 # Upgrade Elasticsearch
 helm upgrade elasticsearch elastic/elasticsearch -n logging
@@ -235,7 +465,7 @@ helm upgrade kibana elastic/kibana -n logging -f helm-charts/elk/kibana/values.y
 helm upgrade filebeat elastic/filebeat -n logging
 ```
 
-### Clean Up Old Indices
+### 10.3 Clean Up Old Indices
 ```bash
 # Delete indices older than 30 days (example)
 curl -u $ELASTIC_USER:$ELASTIC_PASS -X DELETE "http://localhost:9200/filebeat-$(date -d '30 days ago' +%Y.%m.%d)"
@@ -245,7 +475,7 @@ curl -u $ELASTIC_USER:$ELASTIC_PASS -X DELETE "http://localhost:9200/filebeat-$(
 
 ## 11. Troubleshooting
 
-### Common Issues
+### 11.1 Common Issues
 
 **Elasticsearch Pod CrashLooping:**
 - Check resource limits and requests
@@ -276,7 +506,7 @@ kubectl get svc elasticsearch-master -n logging
 - Ensure applications are generating logs
 - Verify Filebeat is discovering containers
 
-### Performance Tuning
+### 11.2 Performance Tuning
 
 **Elasticsearch:**
 - Increase heap size for better performance
@@ -292,7 +522,7 @@ kubectl get svc elasticsearch-master -n logging
 
 ## 12. Security Considerations
 
-### Enable Security Features
+### 12.1 Enable Security Features
 ```bash
 # Enable X-Pack security (production)
 helm upgrade elasticsearch elastic/elasticsearch -n logging \
@@ -300,10 +530,10 @@ helm upgrade elasticsearch elastic/elasticsearch -n logging \
   --set xpack.security.transport.ssl.enabled=true
 ```
 
-### Network Policies
+### 12.2 Network Policies
 Consider implementing Kubernetes Network Policies to restrict traffic between logging components.
 
-### Log Retention
+### 12.3 Log Retention
 Configure index lifecycle management to automatically delete old logs and manage storage costs.
 
 ---
