--- a/docs/6. MONITORING_PROMETHEUS.md
+++ b/docs/6. MONITORING_PROMETHEUS.md
@@ -24,7 +24,7 @@ Our monitoring stack uses the **kube-prometheus-stack** Helm chart for:
 - **Version Compatibility**: Ensures component compatibility
 - **Simplified Updates**: Single command updates
 
-### 2.2 Deployment Steps
+### 2.1 Deployment Steps
 
 #### Automated Setup with Our Script
 
@@ -87,7 +87,7 @@ helm uninstall prometheus -n monitoring
 kubectl delete namespace monitoring
 ```
 
-### 2.3 Architecture Overview
+### 2.2 Architecture Overview
 
 <div align="center">
   <img src="../images/prometheus_stack.png" alt="Prometheus Architecture 
@@ -97,7 +97,7 @@ kubectl delete namespace monitoring
 
 Our monitoring stack consists of these key layers:
 
-**🌐 External Access**
+**External Access**
 ```
 Users → NGINX Ingress Controller → Monitoring Components
 ├── grafana.34.63.222.25.nip.io → Grafana (Port 3000)
@@ -105,7 +105,7 @@ Users → NGINX Ingress Controller → Monitoring Components
 └── alertmanager.34.63.222.25.nip.io → Alertmanager (Port 9093)
 ```
 
-**📊 Monitoring Namespace Components**
+**Monitoring Namespace Components**
 | Component | Type | Port | Purpose |
 |-----------|------|------|---------|
 | Prometheus Server | StatefulSet | 9090 | Metrics collection & storage |
@@ -115,7 +115,7 @@ Users → NGINX Ingress Controller → Monitoring Components
 | Kube State Metrics | Deployment | 8080 | K8s object state metrics |
 | Node Exporter | DaemonSet | 9100 | Node-level system metrics |
 
-**🔧 Control Plane Monitoring (All Enabled)**
+**Control Plane Monitoring (All Enabled)**
 - **K8s API Server** (6443/HTTPS): Cluster performance metrics
 - **Kubelet + cAdvisor** (10250/HTTPS): Container & node metrics  
 - **Etcd** (2381/HTTP): Database performance
@@ -123,7 +123,7 @@ Users → NGINX Ingress Controller → Monitoring Components
 - **Kube Proxy** (10249/HTTP): Network proxy stats
 - **Controller Manager & Scheduler** (Dynamic ports): Control loop metrics
 
-**📈 Data Flow**
+**Data Flow**
 1. **Service Discovery**: Prometheus Operator watches ServiceMonitor CRDs → Generates configs
 2. **Metrics Collection**: Prometheus scrapes all targets (nodes, control plane, apps)
 3. **Storage**: Metrics stored in time-series database with retention policies
@@ -132,7 +132,7 @@ Users → NGINX Ingress Controller → Monitoring Components
 
 **Key Point**: Prometheus scrapes **both** K8s API Server (performance metrics) AND Kube State Metrics (object states) for complete visibility.
 
-### 2.4 ServiceMonitor Configuration
+### 2.3 ServiceMonitor Configuration
 
 Our applications use ServiceMonitor CRDs for automatic discovery:
 
@@ -151,16 +151,16 @@ spec:
       - {{ .Release.Namespace }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+        app: {{ .Release.Name }}
   endpoints:
     - port: http
       path: /metrics
       interval: 15s
 ```
 
-### 2.5 Configuration Management
+### 2.4 Configuration Management
 
-#### **Helm Values Structure**
+#### Helm Values Structure
 ```yaml
 # helm-charts/prometheus/values.yml
 prometheus:
@@ -206,14 +206,14 @@ coreDns:
 
 ## 3. Application Monitoring
 
-### How ServiceMonitors Work
+### 3.1 How ServiceMonitors Work
 
 1. **Discovery**: Prometheus Operator watches for ServiceMonitor CRDs with label `release: prometheus`
 2. **Configuration**: Automatically generates Prometheus scrape configs
 3. **Scraping**: Prometheus contacts Service ClusterIP on specified port/path
 4. **Routing**: kube-proxy forwards requests to backend pods
 
-### Verification Commands
+### 3.2 Verification Commands
 
 ```bash
 # Use our verification script (recommended)
@@ -270,7 +270,7 @@ Our monitoring stack is accessible via:
 
 ## 5. Essential PromQL Queries
 
-### Basic Health Checks
+### 5.1 Basic Health Checks
 ```promql
 # Check if our app is being scraped
 up{job="hand-gesture-servicemonitor"}
@@ -283,7 +283,7 @@ sum(rate(http_requests_total{job="hand-gesture-servicemonitor",status!~"2.."}[5m
 sum(rate(http_requests_total{job="hand-gesture-servicemonitor"}[5m])) * 100
 ```
 
-### Performance Metrics
+### 5.2 Performance Metrics
 ```promql
 # 95th percentile response time
 histogram_quantile(0.95, 
@@ -297,7 +297,7 @@ rate(process_cpu_seconds_total{job="hand-gesture-servicemonitor"}[1m])
 process_resident_memory_bytes{job="hand-gesture-servicemonitor"}
 ```
 
-### Traffic Analysis
+### 5.3 Traffic Analysis
 ```promql
 # Daily request volume
 sum(increase(http_requests_total{job="hand-gesture-servicemonitor"}[24h]))
