--- a/docs/7. TRACING_WITH_JAEGER.md
+++ b/docs/7. TRACING_WITH_JAEGER.md
@@ -30,7 +30,7 @@ In this comprehensive guide, we'll discover how to implement distributed tracing
 
 ---
 
-## Why We Need Distributed Tracing {#why-tracing}
+## 1. Why We Need Distributed Tracing {#why-tracing}
 
 Picture this: Our hand-gesture detection API is running slow. Users are complaining about response times, but we have no idea where the bottleneck is.
 
@@ -46,7 +46,7 @@ database, or network causing the issue."
 query takes 2 seconds. We need to optimize the database."
 ```
 
-### The Microservices Observability Challenge
+### 1.1 The Microservices Observability Challenge
 
 Our modern applications are distributed across multiple services. A single user request might touch:
 - API Gateway
@@ -66,7 +66,7 @@ When something goes wrong, traditional logging falls short. We need to see the *
 
 ---
 
-## Our Jaeger Architecture {#architecture}
+## 2. Our Jaeger Architecture {#architecture}
 
 <div align="center">
   <img src="../images/jaeger.png" alt="Our Jaeger Architecture" width="800">
@@ -75,18 +75,18 @@ When something goes wrong, traditional logging falls short. We need to see the *
 
 Our Jaeger deployment consists of these key components working together:
 
-### Core Components
+### 2.1 Core Components
 
-**🔵 Jaeger Collector**
+**Jaeger Collector**
 - **Purpose**: Receives and processes traces from our applications
 - **Port**: 4317 (OTLP gRPC) - where our FastAPI app sends traces
 - **Configuration**: Direct connection (bypasses agent for simplicity)
 - **Features**:
-  - Validates and processes trace data
-  - Batches traces for efficient storage
+- Validates and processes trace data
+- Batches traces for efficient storage
   - Stores traces in our Elasticsearch cluster
 
-**🟢 Jaeger Query**
+**Jaeger Query**
 - **Purpose**: Provides the web UI and API for viewing traces
 - **Port**: 16686 (Web UI)
 - **Access**: `jaeger.34.63.222.25.nip.io` (via Ingress)
@@ -95,7 +95,7 @@ Our Jaeger deployment consists of these key components working together:
   - REST API for programmatic access
   - Searches and retrieves traces from Elasticsearch
 
-**🟡 Elasticsearch Storage**
+**Elasticsearch Storage**
 - **Purpose**: Persistent storage for all trace data
 - **Configuration**: Shared with our logging infrastructure
 - **Benefits**:
@@ -104,7 +104,7 @@ Our Jaeger deployment consists of these key components working together:
   - Scalable storage
   - Cost-effective (shared with ELK stack)
 
-### Our Direct Connection Approach
+### 2.2 Our Direct Connection Approach
 
 Our application connects directly to the Jaeger Collector using OTLP gRPC:
 
@@ -123,7 +123,7 @@ otlp_exporter = OTLPSpanExporter(
 - **Better error handling** - Direct connection errors are clearer
 - **Resource efficient** - No agent overhead per node
 
-### Data Flow in Our Architecture
+### 2.3 Data Flow in Our Architecture
 
 ```
 1. REQUEST PROCESSING
@@ -141,20 +141,20 @@ otlp_exporter = OTLPSpanExporter(
 
 ---
 
-## Our Elasticsearch Storage Strategy {#storage}
+## 3. Our Elasticsearch Storage Strategy {#storage}
 
 We use Elasticsearch for persistent trace storage, sharing our existing ELK stack infrastructure.
 
-### Why Elasticsearch Works for Us
+### 3.1 Why Elasticsearch Works for Us
 
-**✅ Perfect for our production needs:**
+**Perfect for our production needs:**
 - **Persistent storage** - Traces survive pod restarts
 - **Rich search capabilities** - Complex queries on trace data
 - **Scalable** - Handles our growing trace volume
 - **Cost-effective** - Shared with our logging infrastructure
 - **Mature technology** - Battle-tested in production
 
-### Our Storage Configuration
+### 3.2 Our Storage Configuration
 
 ```yaml
 # helm-charts/jaeger/values.yaml
@@ -172,7 +172,7 @@ storage:
     indexPrefix: jaeger  # Creates jaeger-* indices
 ```
 
-### Index Organization
+### 3.3 Index Organization
 
 Our Elasticsearch cluster contains both logging and tracing data, organized by index prefixes:
 
@@ -196,11 +196,11 @@ Tracing Indices:
 
 ---
 
-## Our FastAPI Implementation {#implementation}
+## 4. Our FastAPI Implementation {#implementation}
 
 Our FastAPI application is instrumented with comprehensive tracing capabilities.
 
-### Core Tracing Setup
+### 4.1 Core Tracing Setup
 
 ```python
 # From our tracer.py
@@ -231,7 +231,7 @@ span_processor = BatchSpanProcessor(
 tracer_provider.add_span_processor(span_processor)
 ```
 
-### Automatic Instrumentation
+### 4.2 Automatic Instrumentation
 
 Our application includes automatic instrumentation for:
 
@@ -246,7 +246,7 @@ FastAPIInstrumentor.instrument_app(app, tracer_provider=tracer_provider)
 PymongoInstrumentor().instrument()
 ```
 
-### Environment Configuration
+### 4.3 Environment Configuration
 
 ```bash
 # Core tracing settings
@@ -258,7 +258,7 @@ JAEGER_COLLECTOR_HOST=jaeger-collector.tracing.svc.cluster.local
 JAEGER_HOSTNAME=hand-gesture-api
 ```
 
-### Health Check Integration
+### 4.4 Health Check Integration
 
 ```python
 @app.get("/health")
@@ -272,9 +272,9 @@ async def health_check():
 
 ---
 
-## Deployment Guide {#deployment}
+## 5. Deployment Guide {#deployment}
 
-### Prerequisites
+### 5.1 Prerequisites
 
 Our deployment requires:
 - Kubernetes cluster with NGINX Ingress
@@ -282,7 +282,7 @@ Our deployment requires:
 - Helm 3.x installed
 - kubectl and helm commands available
 
-### Automated Setup with Our Script
+### 5.2 Automated Setup with Our Script
 
 We've created a comprehensive setup script that handles the entire deployment process:
 
@@ -306,7 +306,7 @@ We've created a comprehensive setup script that handles the entire deployment pr
 ./scripts/setup-jaeger.sh info
 ```
 
-### Manual Step-by-Step Deployment
+### 5.3 Manual Step-by-Step Deployment
 
 If you prefer manual deployment, here are the individual steps our script performs:
 
@@ -383,9 +383,9 @@ curl -s "http://jaeger.34.63.222.25.nip.io/api/services" | jq .
 
 ---
 
-## Monitoring and Analysis {#monitoring}
+## 6. Monitoring and Analysis {#monitoring}
 
-### Accessing Our Jaeger UI
+### 6.1 Accessing Our Jaeger UI
 
 ```bash
 # Get connection information
@@ -402,7 +402,7 @@ kubectl port-forward -n tracing svc/jaeger-query 16686:16686
 
 **Production URL**: http://jaeger.34.63.222.25.nip.io
 
-### Understanding the Jaeger UI
+### 6.2 Understanding the Jaeger UI
 
 #### Search Interface
 
@@ -434,7 +434,7 @@ service=hand-gesture-api error=true
 service=hand-gesture-api prediction.user_id=user123
 ```
 
-### Elasticsearch Trace Analysis
+### 6.3 Elasticsearch Trace Analysis
 
 We can also query our traces directly from Elasticsearch:
 
@@ -450,9 +450,9 @@ curl -X GET "localhost:9200/jaeger-span-*/_search?pretty" \
 
 ---
 
-## Troubleshooting Guide {#troubleshooting}
+## 7. Troubleshooting Guide {#troubleshooting}
 
-### Common Issues and Solutions
+### 7.1 Common Issues and Solutions
 
 #### 1. No traces appearing in Jaeger UI
 
@@ -514,7 +514,7 @@ span_processor = BatchSpanProcessor(
 )
 ```
 
-### Essential Debugging Commands
+### 7.2 Essential Debugging Commands
 
 Our setup script provides automated verification, but here are the individual debugging commands:
 
@@ -564,9 +564,9 @@ kubectl get secret elasticsearch-master-certs -n tracing
 
 ---
 
-## Production Best Practices {#best-practices}
+## 8. Production Best Practices {#best-practices}
 
-### 1. Sampling Strategy
+### 8.1 Sampling Strategy
 
 Don't trace everything - it's expensive:
 
@@ -579,7 +579,7 @@ tracer_provider = TracerProvider(
 )
 ```
 
-### 2. Span Naming Conventions
+### 8.2 Span Naming Conventions
 
 Use descriptive, consistent names:
 
@@ -596,7 +596,7 @@ Use descriptive, consistent names:
 "function1"
 ```
 
-### 3. Error Handling
+### 8.3 Error Handling
 
 Capture errors properly:
 
@@ -611,7 +611,7 @@ except Exception as e:
     raise
 ```
 
-### 4. Resource Management
+### 8.4 Resource Management
 
 Monitor our Elasticsearch usage:
 
@@ -625,7 +625,7 @@ curl -X PUT "localhost:9200/_ilm/policy/jaeger-policy" \
   -d '{"policy": {"phases": {"delete": {"min_age": "30d"}}}}'
 ```
 
-### 5. Performance Optimization
+### 8.5 Performance Optimization
 
 **Batch processing configuration:**
 ```python
