update jenkins docs

--- a/docs/3. JENKINS_SETUP.md
+++ b/docs/3. JENKINS_SETUP.md
@@ -1,6 +1,17 @@
 # 3. Jenkins Setup Guide
 
+<div align="center">
+  <img src="../images/jenkins_dashboard.png" alt="Jenkins Dashboard" width="800">
+  <p><em>Jenkins Dashboard</em></p>
+</div>
+
 This guide covers the one-time setup and configuration for the Jenkins controller instance. This includes granting it the necessary permissions, accessing the VM, exposing it for webhooks, and configuring credentials in the UI.
+
+
+<div align="center">
+  <img src="../images/jenkins_success_cicd.png" alt="Jenkins Success Dialog" width="800">
+  <p><em>Jenkins Success Dialog</em></p>
+</div>
 
 ---
 
@@ -104,8 +115,7 @@ resources. Without this, Jenkins would get
 "Permission Denied" errors from the Kubernetes API 
 server.
 
-### C. Generate the service account token for Jenkins K8s 
-plugin
+### C. Generate the service account token for Jenkins K8s
 You need this to configure Jenkins Kubernetes Cloud:
 
 ```bash
@@ -196,6 +206,11 @@ For Jenkins to receive push and pull request events from GitHub, its web endpoin
 
 ## 4. Configuring Jenkins Credentials in the UI
 
+<div align="center">
+  <img src="../images/jenkins_credentials.png" alt="Jenkins Credentials Setup" width="800">
+  <p><em>Jenkins Credentials Setup</em></p>
+</div>
+
 Your `Jenkinsfile` references several credentials that must be created in the Jenkins UI (`Manage Jenkins` > `Manage Credentials`). This approach is secure because Jenkins encrypts these values and prevents them from being exposed in logs.
 
 -   **Docker Hub Credentials (`dockerhub-credentials`):**
@@ -216,6 +231,12 @@ Your `Jenkinsfile` references several credentials that must be created in the Je
 ---
 
 ## 5. Understanding the Multibranch Pipeline Flow
+
+<div align="center">
+  <img src="../images/jenkins_multibranch_pipeline.png" alt="Jenkins Multibranch Pipeline Flow" width="800">
+  <p><em>Jenkins Multibranch Pipeline Flow</em></p>
+</div>
+
 
 The CI/CD pipeline is designed to handle different Git events in specific ways:
 
