--- a/docs/6. MONITORING_PROMETHEUS.md
+++ b/docs/6. MONITORING_PROMETHEUS.md
@@ -100,9 +100,9 @@ Our monitoring stack consists of these key layers:
 **External Access**
 ```
 Users → NGINX Ingress Controller → Monitoring Components
-├── grafana.34.63.222.25.nip.io → Grafana (Port 3000)
-├── prometheus.34.63.222.25.nip.io → Prometheus (Port 9090)  
-└── alertmanager.34.63.222.25.nip.io → Alertmanager (Port 9093)
+├── grafana.<EXTERNAL_IP>.nip.io → Grafana (Port 3000)
+├── prometheus.<EXTERNAL_IP>.nip.io → Prometheus (Port 9090)  
+└── alertmanager.<EXTERNAL_IP>.nip.io → Alertmanager (Port 9093)
 ```
 
 **Monitoring Namespace Components**
@@ -168,7 +168,7 @@ prometheus:
   ingress:
     enabled: true
     hosts:
-      - prometheus.34.63.222.25.nip.io
+      - prometheus.<EXTERNAL_IP>.nip.io
 
 grafana:
   enabled: true
@@ -176,14 +176,14 @@ grafana:
   ingress:
     enabled: true
     hosts:
-      - grafana.34.63.222.25.nip.io
+      - grafana.<EXTERNAL_IP>.nip.io
 
 alertmanager:
   enabled: true
   ingress:
     enabled: true
     hosts:
-      - alertmanager.34.63.222.25.nip.io
+      - alertmanager.<EXTERNAL_IP>.nip.io
 
 # Control Plane Monitoring (All Enabled)
 kubeApiServer:
@@ -262,9 +262,12 @@ kubectl port-forward -n monitoring svc/prometheus-kube-prometheus-alertmanager 9
 
 Our monitoring stack is accessible via:
 
-- **Grafana**: http://grafana.34.63.222.25.nip.io (admin/[password from script])
-- **Prometheus**: http://prometheus.34.63.222.25.nip.io
-- **Alertmanager**: http://alertmanager.34.63.222.25.nip.io
+- **Grafana**: `http://grafana.<EXTERNAL_IP>.nip.io` (admin/[password from script])
+  - Example: http://grafana.34.63.222.25.nip.io
+- **Prometheus**: `http://prometheus.<EXTERNAL_IP>.nip.io`
+  - Example: http://prometheus.34.63.222.25.nip.io
+- **Alertmanager**: `http://alertmanager.<EXTERNAL_IP>.nip.io`
+  - Example: http://alertmanager.34.63.222.25.nip.io
 
 ---
 
