--- a/docs/7. TRACING_WITH_JAEGER.md
+++ b/docs/7. TRACING_WITH_JAEGER.md
@@ -89,7 +89,7 @@ Our Jaeger deployment consists of these key components working together:
 **Jaeger Query**
 - **Purpose**: Provides the web UI and API for viewing traces
 - **Port**: 16686 (Web UI)
-- **Access**: `jaeger.34.63.222.25.nip.io` (via Ingress)
+- **Access**: `jaeger.<EXTERNAL_IP>.nip.io` (via Ingress)
 - **Features**:
   - Beautiful web interface for exploring traces
   - REST API for programmatic access
@@ -370,15 +370,15 @@ kubectl logs -n tracing deployment/jaeger --tail=100 | grep -i elasticsearch
 
 **Step 5: Test Application Tracing**
 ```bash
-# Generate test traces
+# Generate test traces (replace <EXTERNAL_IP> with your actual IP)
 for i in {1..5}; do 
-  curl -s http://asl.34.63.222.25.nip.io/api/health > /dev/null && \
+  curl -s http://asl.<EXTERNAL_IP>.nip.io/api/health > /dev/null && \
   echo "Request $i sent"
   sleep 1
 done
 
 # Check traces in Jaeger UI
-curl -s "http://jaeger.34.63.222.25.nip.io/api/services" | jq .
+curl -s "http://jaeger.<EXTERNAL_IP>.nip.io/api/services" | jq .
 ```
 
 ---
@@ -400,7 +400,7 @@ kubectl port-forward -n tracing svc/jaeger-query 16686:16686
 # Then access: http://localhost:16686
 ```
 
-**Production URL**: http://jaeger.34.63.222.25.nip.io
+**Production URL**: `http://jaeger.<EXTERNAL_IP>.nip.io` (example: http://jaeger.34.63.222.25.nip.io)
 
 ### 6.2 Understanding the Jaeger UI
 
